[project]
name = "json-autocomplete"
version = "0.2.1"
description = "Autocomplete any prefix substring of a JSON to become valid"
authors = [{name = "Joong-Won Seo", email = "joong.won.seo@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/JoongWonSeo/json_autocomplete.git"

[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"
