[project]
name = "json-autocomplete"
version = "0.2.5"
description = "Autocomplete any prefix substring of a JSON to become valid"
authors = [{ name = "Joong-Won Seo", email = "joong.won.seo@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/JoongWonSeo/json_autocomplete.git"

[build-system]
requires = [
    "setuptools>=40.6.0, < 72", # dumb hot fix
    # The next two lines are needed due to https://github.com/pypa/distutils/issues/283, where PyPy and setuptools are incompatible
    # "setuptools>=40.6.0; implementation_name == 'cpython'",
    # "setuptools>=40.6.0,!=72.2.0; implementation_name != 'cpython'",
    "Cython",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["json_autocomplete"]

[tool.setuptools.package-data]
"json_autocomplete" = ["py.typed"]
